feat: 若干工具函数模块封装集成

--- a/demo/html/index.html
+++ b/demo/html/index.html
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>demo - Okayjs</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>demo - Okayjs</title>
-</head>
-
-<body>
-  <h3>在控制台查看演示结果</h3>
-  <script src="../../dist/okayjs.iife.js"></script>
-  <script>
-    console.log(Okayjs.add(6, 6));
-    console.log(Okayjs.subtract(Okayjs.add(3, 2), 5));
-    console.log(Okayjs.toUpper("uper"));
-  </script>
-</body>
-
+  <body>
+    <h3>在控制台查看演示结果</h3>
+    <script src="../../dist/okayjs.iife.js"></script>
+    <script>
+      console.log(Okayjs.stringIs('okayjs'));
+      console.log(Okayjs.stringIsNumber('007'));
+      console.log(Okayjs.arrayIs([2]));
+      console.log(Okayjs.stringToUpper('uper'));
+    </script>
+  </body>
 </html>
